gRpc.File.Service/file-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: grpc-file-deploy
  name: grpc-file-service
  namespace: grpc
spec:
  ports:
  - port: 5288
    protocol: TCP
    targetPort: 5288
  selector:
    app: grpc-file-deploy
  type: LoadBalancer
