gRpc.File.Service/file-grpc-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-grpc-ing
  namespace: grpc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.org/grpc-services: "grpc-file-service grpc-fs"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: grpc-file-service
            port:
              name: grpc-fs
        path: /file-service
        pathType: Prefix
